# pegasus-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pegasus-projects-skill.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
cli/: cli.py
docs/plans/: 2026-02-27-hetzner-server-provisioning-design.md  2026-02-27-hetzner-server-provisioning.md
pegasus/: cli.py  generate.py  jinja.py  monkeypatch.py  startapp.py  templates.py
pegasus/templates/app_template/: admin.py.j2  apps.py.j2  forms.py.j2  models.py.j2  urls.py.j2  views.py.j2
pegasus/templates/app_template/{{cookiecutter.app_name}}/: admin.py  forms.py  urls.py  views.py
pegasus/templates/app_template_templates/: << app_name >>_home.html  << model_name_lower >>_detail.html  << model_name_lower >>_form.html  << model_name_lower >>_list.html  ^^ app_name ^^_home.html
pegasus/templates/app_template_templates/{{cookiecutter.template_dir_name}}/: {{app_name}}_home.html
pegasus/templates/internal/: cli_output.txt
pegasus/templates/model_templates/: << model_name_lower >>_form.html  << model_name_lower >>_list.html  ^^ model_name_lower ^^_detail.html  ^^ model_name_lower ^^_form.html
pegasus/templates/model_templates/_includes/bootstrap/: delete_modal.html
pegasus/templates/model_templates/{{cookiecutter.template_dir_name}}/: {{model_name_lower}}_detail.html  {{model_name_lower}}_list.html
pegasus_cli/: api_client.py  cli.py  config.py  credentials.py  generate.py  hetzner_client.py  install.py  jinja.py  migrate_css.py  monkeypatch.py  projects.py  ruff.py  server.py  startapp.py  startproject.py
pegasus_cli/templates/app_template/hooks/: post_gen_project.py
pegasus_cli/templates/app_template/{{cookiecutter.app_name}}/: models.py  urls.py  views.py
pegasus_cli/templates/app_template_templates/{{cookiecutter.template_dir_name}}/: {{app_name}}_home.html
pegasus_cli/templates/internal/: cli_output.txt
pegasus_cli/templates/model_templates/{{cookiecutter.template_dir_name}}/: {{model_name_lower}}_detail.html  {{model_name_lower}}_form.html  {{model_name_lower}}_list.html
pegasus_cli/templates/project_template/{{cookiecutter.project_name}}/: README.md  manage.py  pyproject.toml
pegasus_cli/templates/project_template/{{cookiecutter.project_name}}/apps/web/: urls.py  views.py
pegasus_cli/templates/project_template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_api_client.py  test_cli.py  test_credentials.py  test_generate.py  test_hetzner_client.py  test_install_app.py  test_projects.py  test_server.py  test_templates.py
tests/template/{{cookiecutter.dir_name}}/: readme.md
tests/templates/test_pack/: file.txt.j2
tests/templates/test_pack/sub/: subfile.txt.j2
tests/templates/test_pack/sub/subsub/: subsubfile.txt.j2
(+4 files in other folders)
