[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pegasus-cli"
version = "0.12"
description = "CLI for Django and SaaS Pegasus"
readme = "README.md"
authors = [{name = "czue"}, {name = "snopoke"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "cookiecutter",
    "requests",
    "rich",
]

[project.urls]
Homepage = "https://github.com/saaspegasus/pegasus-cli"
Changelog = "https://github.com/saaspegasus/pegasus-cli/releases"
Issues = "https://github.com/saaspegasus/pegasus-cli/issues"
CI = "https://github.com/saaspegasus/pegasus-cli/actions"

[project.entry-points.console_scripts]
pegasus = "pegasus_cli.cli:cli"

[dependency-groups]
dev = ["pytest", "ruff", "pre-commit"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pegasus_cli = ["templates/**/*"]
